firebase auth, store

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Fragment.MarketInfo.MarketInfoActivity"></activity>
+        <activity android:name=".Auth.JoinInfoActivity"></activity>
+        <activity android:name=".Auth.MyCominActivity" />
+        <activity android:name=".Auth.JoinActivity" />
+        <activity android:name=".Auth.LoginActivity" />
+        <activity android:name=".Fragment.MarketInfo.MarketInfoActivity" />
         <activity android:name=".LectureActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
