--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.codingmim">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Fragment.MarketInfo.WriteActivity"></activity>
+        <activity android:name=".Zzim.ZzimActivity"></activity>
+        <activity android:name=".Fragment.MarketInfo.WriteActivity" />
         <activity android:name=".Auth.JoinInfoActivity" />
         <activity android:name=".Auth.MyCominActivity" />
         <activity android:name=".Auth.JoinActivity" />
