--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.firebase:firebase-firestore:21.2.1'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 }
