--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,11 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.pzienowicz:androidx-auto-scroll-view-pager:1.1.0'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
 
 }
