--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation files('libs\\YouTubeAndroidPlayerApi.jar')
 
 
 }
